@@ -9,11 +9,24 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOOInt.h,v 1.36 2008/09/22 10:47:27 dkf Exp $
+ * RCS: @(#) $Id: tclOOInt.h,v 1.37 2008/10/13 13:16:20 dkf Exp $
  */
+
+#ifndef TCL_OO_INTERNAL_H
+#define TCL_OO_INTERNAL_H 1
 
 #include <tclInt.h>
 #include "tclOO.h"
+
+/*
+ * Hack to make things work with Objective C. Note that ObjC isn't really
+ * supported, but we don't want to to be actively hostile to it. [Bug 2163447]
+ */
+
+#ifdef __OBJC__
+#define Class	TclOOClass
+#define Object	TclOOObject
+#endif /* __OBJC__ */
 
 /*
  * Forward declarations.
@@ -584,6 +597,8 @@ MODULE_SCOPE void	TclOOSetupVariableResolver(Tcl_Namespace *nsPtr);
 	    ckfree((char *) (ptr));		\
 	}					\
     } while(0)
+
+#endif /* TCL_OO_INTERNAL_H */
 
 /*
  * Local Variables:
