@@ -1,3 +1,8 @@
+2008-10-13  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOInt.h: Added macro magic to make things work with
+	Objective C. [Bug 2163447]
+
 2008-10-10  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOODefineCmds.c (TclOODefineUnexportObjCmd)
